// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> render correctly with highlighted active 1`] = `
<div
  className="label"
>
  <p
    className="name"
  >
    test
  </p>
  <p
    className="value highlighted"
  >
    test
  </p>
</div>
`;

exports[`<Label /> render correctly with highlighted inactive 1`] = `
<div
  className="label"
>
  <p
    className="name"
  >
    test
  </p>
  <p
    className="value"
  >
    test
  </p>
</div>
`;
